applications/FemToDemApplication/examples/poroexample.gid/poroexample.err
error in .bat file: 
line: 14.- error: couldn't execute "C:\KratosInstall\runkratos": no such file or directory 

