applications/FemToDemApplication/examples/poroexample.gid/poroexample.mdpa

Begin Properties 1
  CONSTITUTIVE_LAW_NAME LinearElasticPlaneStrain2DLaw
  YOUNG_MODULUS 3.0e7
  POISSON_RATIO 0.2
  DENSITY_SOLID 2.0e3
  DENSITY_WATER 1.0e3
  POROSITY 0.3
  BULK_MODULUS_SOLID 1.0e12
  BULK_MODULUS_FLUID 2.0e9
  PERMEABILITY_XX 4.5e-13
  PERMEABILITY_YY 4.5e-13
  PERMEABILITY_XY 0.0
  DYNAMIC_VISCOSITY 1.0e-3
  THICKNESS 1.0
End Properties


Begin Nodes
  1  -6.24291 2.00341 0.0
  2  -6.094088888888889 1.5582077777777772 0.0
  3  -5.775637777777778 1.939088888888889 0.0
  4  -5.625429911824199 1.4673950657674797 0.0
  5  -5.945267777777778 1.1130055555555551 0.0
  6  -5.308365555555556 1.8747677777777778 0.0
  7  -5.4766088007130875 1.0221928435452583 0.0
  8  -5.131415912314089 1.430798232081812 0.0
  9  -5.796446666666667 0.6678033333333331 0.0
  10  -4.841093333333333 1.8104466666666668 0.0
  11  -5.043744837046728 0.9513071354562678 0.0
  12  -5.327787689601975 0.5769906213230344 0.0
  13  -4.664143690091866 1.3664771209707018 0.0
  14  -5.647625555555556 0.22260111111111058 0.0
  15  -4.373821111111111 1.7461255555555555 0.0
  16  -4.89552746017877 0.5054093848060108 0.0
  17  -4.57516585008057 0.859481040668822 0.0
  18  -5.178966578490866 0.13178839910081308 0.0
  19  -4.1968714678696415 1.3021560098595906 0.0
  20  -5.498804444444445 -0.22260111111111125 0.0
  21  -3.9065488888888886 1.6818044444444444 0.0
  22  -4.427776294633297 0.4105861765810903 0.0
  23  -4.1366540612265785 0.7759461337691003 0.0
  24  -4.7508678854708055 0.05931076096351129 0.0
  25  -3.784399685833634 1.2105763811350407 0.0
  26  -5.030145467379754 -0.31341382312140964 0.0
  27  -4.009853075746175 0.32632233192878535 0.0
  28  -3.764720006924825 0.7125545777664054 0.0
  29  -5.349983333333333 -0.6678033333333333 0.0
  30  -3.4392766666666668 1.6174833333333334 0.0
  31  -4.285662660086582 -0.043713479435341096 0.0
  32  -4.616481008013486 -0.3866261746063713 0.0
  33  -4.881324356268642 -0.7586160453436318 0.0
  34  -3.2623270234251973 1.1735137876373676 0.0
  35  -3.6314038817327217 0.27495615464503653 0.0
  36  -3.891978434333276 -0.1198872571856977 0.0
  37  -3.300414012568237 0.6149004130156027 0.0
  38  -4.159087819592889 -0.5120099333152734 0.0
  39  -5.201162222222223 -1.1130055555555556 0.0
  40  -2.9720044444444444 1.5531622222222223 0.0
  41  -4.510283347343267 -0.8307438616154557 0.0
  42  -3.441969569165609 -0.15853555064047353 0.0
  43  -4.732503245157533 -1.203818267565854 0.0
  44  -2.795054801202977 1.109192676526257 0.0
  45  -3.155776865290913 0.22466653779481782 0.0
  46  -3.703733268826361 -0.5554000290903385 0.0
  47  -4.033426260105984 -0.8724694202592919 0.0
  48  -2.8383151206681005 0.5642525153272077 0.0
  49  -5.052341111111112 -1.5582077777777779 0.0
  50  -2.504732222222222 1.488841111111111 0.0
  51  -4.303835286680977 -1.2626152569883664 0.0
  52  -3.0321744530105277 -0.1897759141956401 0.0
  53  -3.243683767385062 -0.5906285840575993 0.0
  54  -3.5580237434720736 -0.9283814142383191 0.0
  55  -4.583682134046421 -1.6490204897880767 0.0
  56  -2.6933817639543056 0.11057920668918686 0.0
  57  -2.3414851441732814 0.9277895039701104 0.0
  58  -3.847816570105498 -1.309371993550166 0.0
  59  -2.414447617972215 0.4954911808111575 0.0
  60  -4.90352 -2.00341 0.0
  61  -2.0374600000000003 1.42452 0.0
  62  -2.643966834820752 -0.25295699046180986 0.0
  63  -2.8835020534505658 -0.6179295905920119 0.0
  64  -4.1184256885347175 -1.7022134176198906 0.0
  65  -3.0965574298641676 -1.0427076584716393 0.0
  66  -3.381727486451118 -1.3510856617718545 0.0
  67  -4.429884545454546 -2.051908181818182 0.0
  68  -2.235600002494941 0.05506523237564198 0.0
  69  -1.860510356758531 0.9805504543040346 0.0
  70  -3.65235108267841 -1.7445121119799194 0.0
  71  -1.8537654711191438 0.5635736907977452 0.0
  72  -2.3751759011934226 -0.6227238865862268 0.0
  73  -3.9562490909090924 -2.1004063636363637 0.0
  74  -2.636383625401079 -1.0238378103765355 0.0
  75  -1.570187777777778 1.3601988888888887 0.0
  76  -2.911304715125645 -1.3933434204906758 0.0
  77  -3.184185269493308 -1.7858253253381149 0.0
  78  -1.3932381345363076 0.9162293431929233 0.0
  79  -1.8115830302263747 -0.27953493528075724 0.0
  80  -3.482613636363637 -2.1489045454545455 0.0
  81  -2.1625501724697087 -1.0515736907472055 0.0
  82  -1.5147885506038898 0.09763032343338973 0.0
  83  -2.439045919316626 -1.437368353945605 0.0
  84  -1.8881966252467928 -0.7508732556706637 0.0
  85  -1.1029155555555565 1.2958777777777777 0.0
  86  -2.7141033201037605 -1.8287942815371325 0.0
  87  -1.2162884912948384 0.472259797496958 0.0
  88  -3.0089781818181827 -2.1974027272727272 0.0
  89  -0.9259659123140862 0.851908232081812 0.0
  90  -1.258742855876149 -0.32117672696931665 0.0
  91  -1.4637142312762852 -0.7241297983415182 0.0
  92  -1.6859941420350368 -1.0949306582325633 0.0
  93  -1.966001339832903 -1.4829789103283115 0.0
  94  -1.040600254952687 0.029843978849391828 0.0
  95  -2.2426418119057785 -1.873597946145412 0.0
  96  -2.535342727272728 -2.245900909090909 0.0
  97  -0.6356433333333342 1.2315566666666666 0.0
  98  -0.7563704864021212 0.41169676677728373 0.0
  99  -0.8515232340443406 -0.3145266517352845 0.0
  100  -0.4586936900918628 0.7875871209707013 0.0
  101  -1.4926175486213242 -1.5297155779538283 0.0
  102  -1.2094865491531677 -1.1433932443197343 0.0
  103  -1.7702876544709585 -1.9197961893975244 0.0
  104  -2.061707272727273 -2.294399090909091 0.0
  105  -0.8661840661162283 -0.7211085325969238 0.0
  106  -0.5650284845256544 -0.027436204613568105 0.0
  107  -0.16837111111111192 1.1672355555555556 0.0
  108  -0.2817440468503922 0.3436175752747359 0.0
  109  -0.43264650827848317 -0.4264149079481201 0.0
  110  -1.0190873328002341 -1.5771763794366727 0.0
  111  -1.297388654083643 -1.9669217648318615 0.0
  112  -1.5880718181818185 -2.342897272727273 0.0
  113  0.008578532130359529 0.7232660098595902 0.0
  114  -0.6575219524177598 -1.2215341884809892 0.0
  115  -0.09297926315741445 -0.09416159449803896 0.0
  116  0.2989011111111104 1.1029144444444445 0.0
  117  -0.2815098109161682 -0.8413188882402204 0.0
  118  0.19452104163688033 0.2544641877667406 0.0
  119  0.031587248944103585 -0.47091081688225045 0.0
  120  -0.8241689200806658 -2.014623408513131 0.0
  121  -1.114436363636364 -2.3913954545454548 0.0
  122  -0.5454945203420829 -1.6250781722892258 0.0
  123  0.47585075435258184 0.658944898748479 0.0
  124  -0.05312799532346779 -1.3321031548807274 0.0
  125  0.4047479881298195 -0.32363762831991405 0.0
  126  0.7661733333333327 1.0385933333333335 0.0
  127  0.6528003975940513 0.21497535305251358 0.0
  128  0.2888344076948226 -0.8758417286523095 0.0
  129  -0.6408009090909093 -2.4398936363636365 0.0
  130  -0.3507649527067571 -2.0626685145306385 0.0
  131  -0.07374901196397299 -1.758814447755978 0.0
  132  0.9431229765748022 0.5946237876373676 0.0
  133  0.547705487015582 -1.2783781142494135 0.0
  134  0.33410805158091295 -1.696813712469396 0.0
  135  1.233445555555555 0.9742722222222222 0.0
  136  -0.16716545454545462 -2.4883918181818183 0.0
  137  0.9433255703729624 -0.34710655248832567 0.0
  138  0.7670863370766416 -0.8578175925886329 0.0
  139  0.12274297915336407 -2.110912842847447 0.0
  140  1.1281686994372626 0.15228555292607693 0.0
  141  1.4103951987970247 0.5303026765262555 0.0
  142  0.7718499999999999 -1.6912600000000007 0.0
  143  0.5391599999999999 -2.1140750000000006 0.0
  144  1.0045399999999998 -1.2684450000000003 0.0
  145  0.30647 -2.53689 0.0
  146  1.2372299999999998 -0.8456300000000004 0.0
  147  1.7007177777777764 0.9099511111111112 0.0
  148  1.46992 -0.4228150000000003 0.0
  149  1.70261 -2.220446049250313e-16 0.0
  150  1.9353 0.4228149999999999 0.0
  151  2.16799 0.84563 0.0
End Nodes


Begin Elements UPwSmallStrainElement2D3N
  1  1  1 2 3
  2  1  14 20 18
  3  1  49 60 55
  4  1  5 9 7
  5  1  29 39 33
  6  1  2 5 4
  7  1  9 14 12
  8  1  20 29 26
  9  1  39 49 43
  10  1  151 147 150
  11  1  75 61 69
  12  1  6 3 4
  13  1  116 107 113
  14  1  30 21 25
  15  1  135 126 132
  16  1  97 85 89
  17  1  50 40 44
  18  1  15 10 13
  19  1  147 135 141
  20  1  61 50 57
  21  1  107 97 100
  22  1  21 15 19
  23  1  126 116 123
  24  1  85 75 78
  25  1  40 30 34
  26  1  10 6 8
  27  1  60 67 55
  28  1  55 67 64
  29  1  64 67 73
  30  1  64 73 70
  31  1  55 64 51
  32  1  70 73 80
  33  1  70 80 77
  34  1  64 70 58
  35  1  77 80 88
  36  1  77 88 86
  37  1  70 77 66
  38  1  86 88 96
  39  1  86 96 95
  40  1  77 86 76
  41  1  95 96 104
  42  1  95 104 103
  43  1  86 95 83
  44  1  103 104 112
  45  1  103 112 111
  46  1  95 103 93
  47  1  111 112 121
  48  1  111 121 120
  49  1  103 111 101
  50  1  120 121 129
  51  1  120 129 130
  52  1  111 120 110
  53  1  130 129 136
  54  1  130 136 139
  55  1  120 130 122
  56  1  139 136 145
  57  1  139 145 143
  58  1  139 143 134
  59  1  134 143 142
  60  1  134 142 133
  61  1  139 134 131
  62  1  133 142 144
  63  1  133 144 138
  64  1  134 133 124
  65  1  138 144 146
  66  1  133 138 128
  67  1  138 146 137
  68  1  130 139 131
  69  1  130 131 122
  70  1  122 131 124
  71  1  124 131 134
  72  1  51 64 58
  73  1  51 58 47
  74  1  47 58 54
  75  1  51 47 41
  76  1  55 51 43
  77  1  43 51 41
  78  1  43 41 33
  79  1  33 41 32
  80  1  32 41 38
  81  1  33 32 26
  82  1  26 32 24
  83  1  24 32 31
  84  1  26 24 18
  85  1  18 24 16
  86  1  16 24 22
  87  1  18 16 12
  88  1  12 16 11
  89  1  55 43 49
  90  1  33 26 29
  91  1  18 12 14
  92  1  43 33 39
  93  1  26 18 20
  94  1  11 16 17
  95  1  12 11 7
  96  1  7 11 8
  97  1  12 7 9
  98  1  38 41 47
  99  1  38 47 46
  100  1  46 47 54
  101  1  46 54 53
  102  1  38 46 36
  103  1  53 54 65
  104  1  46 53 42
  105  1  32 38 31
  106  1  36 46 42
  107  1  36 42 35
  108  1  38 36 31
  109  1  31 36 27
  110  1  27 36 35
  111  1  27 35 28
  112  1  31 27 22
  113  1  22 27 23
  114  1  28 35 37
  115  1  27 28 23
  116  1  23 28 25
  117  1  22 23 17
  118  1  17 23 19
  119  1  35 42 45
  120  1  37 35 45
  121  1  37 45 48
  122  1  48 45 56
  123  1  37 48 44
  124  1  28 37 34
  125  1  22 17 16
  126  1  65 54 66
  127  1  65 66 76
  128  1  65 76 74
  129  1  66 54 58
  130  1  74 76 83
  131  1  65 74 63
  132  1  74 83 81
  133  1  66 58 70
  134  1  76 66 77
  135  1  83 76 86
  136  1  81 83 93
  137  1  74 81 72
  138  1  81 93 92
  139  1  63 74 72
  140  1  65 63 53
  141  1  53 63 52
  142  1  52 63 62
  143  1  53 52 42
  144  1  42 52 45
  145  1  45 52 56
  146  1  56 52 62
  147  1  56 62 68
  148  1  68 62 72
  149  1  72 62 63
  150  1  56 68 59
  151  1  93 83 95
  152  1  59 68 71
  153  1  56 59 48
  154  1  48 59 57
  155  1  31 22 24
  156  1  4 5 7
  157  1  4 7 8
  158  1  2 4 3
  159  1  124 133 128
  160  1  124 128 117
  161  1  11 17 13
  162  1  137 146 148
  163  1  138 137 125
  164  1  69 61 57
  165  1  69 57 71
  166  1  89 85 78
  167  1  89 78 87
  168  1  57 50 44
  169  1  57 44 48
  170  1  78 75 69
  171  1  78 69 71
  172  1  87 78 71
  173  1  25 21 19
  174  1  25 19 23
  175  1  13 10 8
  176  1  13 8 11
  177  1  19 15 13
  178  1  19 13 17
  179  1  8 6 4
  180  1  113 107 100
  181  1  113 100 108
  182  1  108 100 98
  183  1  113 108 118
  184  1  44 40 34
  185  1  44 34 37
  186  1  100 97 89
  187  1  100 89 98
  188  1  98 89 87
  189  1  98 87 94
  190  1  94 87 82
  191  1  98 94 106
  192  1  34 30 25
  193  1  34 25 28
  194  1  132 126 123
  195  1  132 123 127
  196  1  127 123 118
  197  1  127 118 125
  198  1  118 123 113
  199  1  113 123 116
  200  1  132 127 140
  201  1  141 135 132
  202  1  141 132 140
  203  1  141 140 149
  204  1  147 141 150
  205  1  92 93 101
  206  1  101 93 103
  207  1  92 101 102
  208  1  81 92 84
  209  1  128 138 125
  210  1  72 81 84
  211  1  137 148 140
  212  1  101 111 110
  213  1  101 110 102
  214  1  102 110 114
  215  1  114 110 122
  216  1  114 122 124
  217  1  122 110 120
  218  1  102 114 105
  219  1  71 68 82
  220  1  59 71 57
  221  1  124 117 114
  222  1  98 106 108
  223  1  108 106 115
  224  1  115 106 109
  225  1  108 115 118
  226  1  118 115 125
  227  1  94 82 90
  228  1  92 102 91
  229  1  82 87 71
  230  1  117 128 119
  231  1  106 94 99
  232  1  125 137 127
  233  1  128 125 119
  234  1  109 106 99
  235  1  109 99 105
  236  1  105 99 90
  237  1  115 109 119
  238  1  119 109 117
  239  1  115 119 125
  240  1  117 109 105
  241  1  140 127 137
  242  1  84 92 91
  243  1  94 90 99
  244  1  102 105 91
  245  1  105 114 117
  246  1  90 82 79
  247  1  91 105 90
  248  1  91 90 79
  249  1  79 82 68
  250  1  149 150 141
  251  1  148 149 140
  252  1  84 91 79
  253  1  84 79 72
  254  1  79 68 72
End Elements


Begin Conditions UPwForceCondition2D1N
  1  1  151
End Conditions


Begin SubModelPart Body_Part-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    2
    3
    4
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
    35
    36
    37
    38
    39
    40
    41
    42
    43
    44
    45
    46
    47
    48
    49
    50
    51
    52
    53
    54
    55
    56
    57
    58
    59
    60
    61
    62
    63
    64
    65
    66
    67
    68
    69
    70
    71
    72
    73
    74
    75
    76
    77
    78
    79
    80
    81
    82
    83
    84
    85
    86
    87
    88
    89
    90
    91
    92
    93
    94
    95
    96
    97
    98
    99
    100
    101
    102
    103
    104
    105
    106
    107
    108
    109
    110
    111
    112
    113
    114
    115
    116
    117
    118
    119
    120
    121
    122
    123
    124
    125
    126
    127
    128
    129
    130
    131
    132
    133
    134
    135
    136
    137
    138
    139
    140
    141
    142
    143
    144
    145
    146
    147
    148
    149
    150
    151
  End SubModelPartNodes
  Begin SubModelPartElements
    1
    2
    3
    4
    5
    6
    7
    8
    9
    10
    11
    12
    13
    14
    15
    16
    17
    18
    19
    20
    21
    22
    23
    24
    25
    26
    27
    28
    29
    30
    31
    32
    33
    34
    35
    36
    37
    38
    39
    40
    41
    42
    43
    44
    45
    46
    47
    48
    49
    50
    51
    52
    53
    54
    55
    56
    57
    58
    59
    60
    61
    62
    63
    64
    65
    66
    67
    68
    69
    70
    71
    72
    73
    74
    75
    76
    77
    78
    79
    80
    81
    82
    83
    84
    85
    86
    87
    88
    89
    90
    91
    92
    93
    94
    95
    96
    97
    98
    99
    100
    101
    102
    103
    104
    105
    106
    107
    108
    109
    110
    111
    112
    113
    114
    115
    116
    117
    118
    119
    120
    121
    122
    123
    124
    125
    126
    127
    128
    129
    130
    131
    132
    133
    134
    135
    136
    137
    138
    139
    140
    141
    142
    143
    144
    145
    146
    147
    148
    149
    150
    151
    152
    153
    154
    155
    156
    157
    158
    159
    160
    161
    162
    163
    164
    165
    166
    167
    168
    169
    170
    171
    172
    173
    174
    175
    176
    177
    178
    179
    180
    181
    182
    183
    184
    185
    186
    187
    188
    189
    190
    191
    192
    193
    194
    195
    196
    197
    198
    199
    200
    201
    202
    203
    204
    205
    206
    207
    208
    209
    210
    211
    212
    213
    214
    215
    216
    217
    218
    219
    220
    221
    222
    223
    224
    225
    226
    227
    228
    229
    230
    231
    232
    233
    234
    235
    236
    237
    238
    239
    240
    241
    242
    243
    244
    245
    246
    247
    248
    249
    250
    251
    252
    253
    254
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Solid_Displacement-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    1
    2
    5
    9
    14
    20
    29
    39
    49
    60
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
  End SubModelPartConditions
End SubModelPart

Begin SubModelPart Force-auto-1
  Begin SubModelPartTables
  End SubModelPartTables
  Begin SubModelPartNodes
    151
  End SubModelPartNodes
  Begin SubModelPartElements
  End SubModelPartElements
  Begin SubModelPartConditions
    1
  End SubModelPartConditions
End SubModelPart

